--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <div class="container">
         <div class="image-box">
-            <img src="bird.jpg" class="sigma-pic" width="100">
+            <img src="kevin.jpg" class="sigma-pic" width="100">
             <p><a href="https://pixar.fandom.com/wiki/Dug">Kevin</a></p>
         </div>
         <div class="image-box">
